--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,10 @@
     <string name="app_name">DuckDroid</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-    <string name="title_activity_main">Main</string>
+    <string name="title_activity_main">DuckDroid</string>
+    <string name="main_dd_icon">DuckDroid</string>
+    <string name="edit_search">Query</string>
+    <string name="button_search">Search</string>
+    
 
 </resources>
