--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,12 +1,14 @@
 <resources>
 
     <string name="app_name">DuckDroid</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">DuckDroid</string>
     <string name="main_dd_icon">DuckDroid</string>
-    <string name="edit_search">Query</string>
-    <string name="button_search">>></string>
+    <string name="title_activity_duckdroid">Duckdroid</string>
     
+    
+    <!-- NEW -->
+    <string name="edit_search_hint">Enter your query</string>
+    <string name="btn_search_text">SEARCH</string>
 
 </resources>
