--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,11 +14,11 @@
 
     <!-- Preferences -->
     <string name="title_activity_my_preference">Preferences</string>
-    <string name="pref_history">Save history</string>
+    <string name="pref_history">History</string>
     <string name="pref_history_summary">Save recents queries</string>
     <string name="pref_bangprofile">!bang profile</string>
     <string name="pref_bangprofile_summary">Choose a specific type of !bang</string>
-    <string name="pref_bangsubmit">!bang immediate query</string>
+    <string name="pref_bangsubmit">!bang submit</string>
     <string name="pref_bangsubmit_summary">Perform query immediately after a !bang</string>
 
     <string-array name="pref_bang_list">
@@ -47,6 +47,10 @@
         <item>!anidb</item>
         <item>!yt</item>
         <item>!wg</item>
+        <item>!amca</item>
+        <item>!ncix</item>
+        <item>!7digital</item>
+        <item>!imdb</item>
     </string-array>
     
     <string-array name="bang_Tech">
