--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="title_activity_duckdroid">Duckdroid</string>
     
     <string name="title_activity_duckdroid_about">About Duckdroid</string>
-    <string name="author">Shaika-Dzari</string>
-    <string name="email">shaikadzari@4nakama.net</string>
+    <string name="author">Remi Guillemette</string>
+    <string name="email">duckdroid@n4dev.ca</string>
     <string name="licence">This program is free software.\nIt comes without any warranty, to the extent permitted by applicable law.\nYou can redistribute it and/or modify it under the terms of the Do What The Fuck You Want To Public License, Version 2, as published by Sam Hocevar.\n\nSee http://sam.zoy.org/wtfpl/COPYING for more details.</string>
 
     <!-- Layouts and Fragments -->
